--- a/Examples/Allergies/Example-DataStandardsWales-AllergyIntolerance-NoKnownAllergy.json
+++ b/Examples/Allergies/Example-DataStandardsWales-AllergyIntolerance-NoKnownAllergy.json
@@ -11,7 +11,7 @@
 			{
 				"system": "http://terminology.hl7.org/CodeSystem/allergyintolerance-clinical",
 				"code": "active",
-				"display": "active"
+				"display": "Active"
 			}
 		]
 	},
@@ -20,7 +20,7 @@
 			{
 				"system": "http://terminology.hl7.org/CodeSystem/allergyintolerance-verification",
 				"code": "unconfirmed",
-				"display": "unconfirmed"
+				"display": "Unconfirmed"
 			}
 		]
 	},
