--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "NHSWalesfhirprofilesR",
   "version": "0.1.0",
   "description": "Put a description here",
-  "dependencies": {},
+  "dependencies": {
+    "fhir.r4.ukcore.stu1": "0.5.0"
+  },
   "fhirVersions": [
     "4.0.0"
   ]
